/*
 * Copyright (c) 2018, Open-Software and contributors
 *
 * The code is licensed under the MIT License, which can be found in the root directory of the repository
 */

version '0.2'

apply plugin: 'java'

subprojects {

    apply plugin: 'java'
    apply plugin: 'idea'

    group 'app.open.software'
    version rootProject.version

    repositories {
        mavenCentral()
    }

    dependencies {
        testCompile 'junit:junit:4.12'
        testCompile 'org.mockito:mockito-all:1.10.19'

        annotationProcessor 'org.projectlombok:lombok:1.18.2'
        implementation 'org.projectlombok:lombok:1.18.2'
    }

    this.sourceCompatibility = 11
    this.targetCompatibility = 11

    compileJava.options.encoding 'UTF-8'
}

task createReleaseZip(type: Zip, dependsOn: ['Open-Container:shadowJar', 'Open-Master:shadowJar']) {
    println("Configure Zip File")
    
    from('.') {
        include('LICENSE')
        include('README.md')
    }

    from('Open-Container/build/libs') {
        include('Open-Container-' + this.version.toString() + '-all.jar')
    }

    from('Open-Master/build/libs') {
        include('Open-Master-' + this.version.toString() + "-all.jar")
    }

    archiveName 'Open-Cloud-Release-' + this.version.toString() + ".zip"
    destinationDir = file("${this.buildDir}/zip")
}
